# serializer version: 1
# name: test_browse_media_categories
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_playlists',
        'media_content_type': 'spotify://current_user_playlists',
        'thumbnail': None,
        'title': 'Playlists',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.ARTIST: 'artist'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_followed_artists',
        'media_content_type': 'spotify://current_user_followed_artists',
        'thumbnail': None,
        'title': 'Artists',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.ALBUM: 'album'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_saved_albums',
        'media_content_type': 'spotify://current_user_saved_albums',
        'thumbnail': None,
        'title': 'Albums',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_saved_tracks',
        'media_content_type': 'spotify://current_user_saved_tracks',
        'thumbnail': None,
        'title': 'Tracks',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.PODCAST: 'podcast'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_saved_shows',
        'media_content_type': 'spotify://current_user_saved_shows',
        'thumbnail': None,
        'title': 'Podcasts',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_recently_played',
        'media_content_type': 'spotify://current_user_recently_played',
        'thumbnail': None,
        'title': 'Recently played',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.ARTIST: 'artist'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_top_artists',
        'media_content_type': 'spotify://current_user_top_artists',
        'thumbnail': None,
        'title': 'Top Artists',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_top_tracks',
        'media_content_type': 'spotify://current_user_top_tracks',
        'thumbnail': None,
        'title': 'Top Tracks',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.GENRE: 'genre'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/categories',
        'media_content_type': 'spotify://categories',
        'thumbnail': None,
        'title': 'Categories',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/featured_playlists',
        'media_content_type': 'spotify://featured_playlists',
        'thumbnail': None,
        'title': 'Featured Playlists',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': <MediaClass.ALBUM: 'album'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/new_releases',
        'media_content_type': 'spotify://new_releases',
        'thumbnail': None,
        'title': 'New Releases',
      }),
    ]),
    'children_media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/library',
    'media_content_type': 'spotify://library',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Media Library',
  })
# ---
# name: test_browse_media_playlists
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:playlist:unique_identifier_00',
        'media_content_type': 'spotify://playlist',
        'thumbnail': None,
        'title': 'Playlist1',
      }),
    ]),
    'children_media_class': <MediaClass.PLAYLIST: 'playlist'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_playlists',
    'media_content_type': 'spotify://current_user_playlists',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Playlists',
  })
# ---
# name: test_browse_media_playlists[01J5TX5A0FF6G5V0QJX6HBC94T]
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/spotify:playlist:unique_identifier_00',
        'media_content_type': 'spotify://playlist',
        'thumbnail': None,
        'title': 'Playlist1',
      }),
    ]),
    'children_media_class': <MediaClass.PLAYLIST: 'playlist'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://01j5tx5a0ff6g5v0qjx6hbc94t/current_user_playlists',
    'media_content_type': 'spotify://current_user_playlists',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Playlists',
  })
# ---
# name: test_browse_media_playlists[32oesphrnacjcf7vw5bf6odx3]
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': True,
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify://32oesphrnacjcf7vw5bf6odx3/spotify:playlist:unique_identifier_00',
        'media_content_type': 'spotify://playlist',
        'thumbnail': None,
        'title': 'Playlist1',
      }),
    ]),
    'children_media_class': <MediaClass.PLAYLIST: 'playlist'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'spotify://32oesphrnacjcf7vw5bf6odx3/current_user_playlists',
    'media_content_type': 'spotify://current_user_playlists',
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Playlists',
  })
# ---
# name: test_browse_media_root
  dict({
    'can_expand': True,
    'can_play': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': None,
        'media_class': <MediaClass.APP: 'app'>,
        'media_content_id': 'spotify://01J5TX5A0FF6G5V0QJX6HBC94T',
        'media_content_type': 'spotify://library',
        'thumbnail': 'https://brands.home-assistant.io/_/spotify/logo.png',
        'title': 'spotify_1',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'children_media_class': None,
        'media_class': <MediaClass.APP: 'app'>,
        'media_content_id': 'spotify://32oesphrnacjcf7vw5bf6odx3',
        'media_content_type': 'spotify://library',
        'thumbnail': 'https://brands.home-assistant.io/_/spotify/logo.png',
        'title': 'spotify_2',
      }),
    ]),
    'children_media_class': <MediaClass.APP: 'app'>,
    'media_class': <MediaClass.APP: 'app'>,
    'media_content_id': 'spotify://',
    'media_content_type': 'spotify',
    'not_shown': 0,
    'thumbnail': 'https://brands.home-assistant.io/_/spotify/logo.png',
    'title': 'Spotify',
  })
# ---
